# irc-chat-notifier

./: Cargo.toml  README.md
src/: main.rs
