[package]
name = "irc-chat-notifier"
description = "This program displays a desktop notification when someone chat on the channel."
version = "0.1.0"
authors = ["Jacky Boen <jacky@veand.co>"]
edition = "2018"
repository = "https://github.com/aqiank/irc-chat-notifier"
license = "GPL-2.0"

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
futures = "0.3.4"
irc = "0.13.6"
log = "0.4.8"
notifica = "1.0.2"
tokio = "0.2.19"